# ObsidianNotesAgent

./: .gitignore  LICENSE  README.md  pyproject.toml
src/noteagent/core/: folder_navigation.py  main.py  obsidian_nav.py
src/obsidiannoteagent/core/: agent_loop.py  chroma_db.py  langchain_rag.py  main.py  obsidian_nav.py
tests/: test_folder_navigation.py
