[project]
name = "obsidiannoteagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "langchain>=0.3",
  "langchain-community",
  "langchain-ollama",
  "chromadb",
  "unstructured",
  "obsidiantools>=0.11.0",
  "langchain-chroma>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[tool.hatch.build.targets.wheel]
packages = ["src/noteagent"]

[tool.ruff]
line-length = 150
